[package]
name = "x"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
psutil = {version = "5.4.0", features = ["process", "cpu"]}
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
